refactor: Stream toList 적용